[package]
name = "pixiv-dl"
version = "0.1.0"
authors = ["BeatButton <thebeatbutton@gmail.com>"]
edition = "2015"

[dependencies]
chrono = "0.4"
gif = "0.10"
image = "0.20"
rayon = "1"
regex = "1"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
zip = "0.4"
failure = "0.1.3"
